# code-snippets

JMeter/: user.jmx
bash/: connect-66328.sh  connect-66331.sh  connect-66334.sh  connect-66337.sh  connect-66340.sh  connect-66343.sh  connect.sh
c/: README.md
c++/: AimToTen.cpp  ChessboardPattern.cpp  DivFreed2.cpp  DoubleWeights.cpp  EqualSubstrings2.cpp  Istr.cpp  MagicSubset.cpp  MoveStonesEasy.cpp  MultiplicationTable2Easy.cpp  ParenthesesDiv2Easy.cpp  Permatchd2.cpp  Quorum.cpp  README.md  TopBiologist.cpp  heap.cc  kmaxsumsubarray.cc  maxsumprefixmethod.cc  reflection.cc
c++/dp/: knapsack01.cc
c/memcached/: .memcached_sample.c.swp  CMakeLists.txt  README.md  memcached_sample.c
go/: README.md
java/: TestNioFileRead.java  TestNioFileWrite.java
java/learn-reactivespring/: build.gradle  pom.xml
java/learn-reactivespring/src/test/java/com/learnreactivespring/fluxandmonoplayground/: ColdAndHotPublisherTest.java  CustomException.java  FluxAndMonoBackPressureTest.java  FluxAndMonoCombineTest.java  FluxAndMonoErrorTest.java  FluxAndMonoFactoryTest.java  FluxAndMonoFilterTest.java  FluxAndMonoTest.java  FluxAndMonoTransformTest.java  FluxAndMonoWithTimeTest.java  VirtualTimeTest.java
protobuf/: README.md  add_employee.cc  list_employee.py
protobuf/networking/: CMakeLists.txt  README.md  employeedb.proto  employeedb_client.cc  employeedb_server.cc
protobuf/v2/: CMakeLists.txt  README.md  add_employee.cc  employeedb.proto  list_employee.py
python/: README.md
